--- a/frontend/src/css/variables.css
+++ b/frontend/src/css/variables.css
@@ -4,7 +4,7 @@
   --color-lightgray2: #e9e9e9;
   --color-gray: #d5d5d5;
   --color-darkgray: #626262;
-  --color-main: #fff6e5;
+  --color-main: #ffacae;
   --color-sublight: #bc856e;
   --color-subbold: #7e5a39;
   --color-text: #6d451f;
